<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
            android:id="@+id/label_add_dialog"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_dialog_label"
            android:textSize="20dp"
            android:layout_marginStart="10dp"/>
    <EditText
            android:id="@+id/input_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_add_dialog"
            android:hint="@string/add_work"
            android:layout_marginStart="10dp"/>
    <EditText
            android:id="@+id/input_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/input_work"
            app:layout_constraintTop_toBottomOf="@id/label_add_dialog"
            android:hint="@string/add_count"
            android:layout_marginStart="20dp"
            android:inputType="number"/>
</androidx.constraintlayout.widget.ConstraintLayout>